apps/aegis-dashboard/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aegis-dashboard
  namespace: aegis
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: aegis-dashboard
  template:
    metadata:
      labels:
        app: aegis-dashboard
    spec:
      containers:
        - name: aegis-dashboard
          image: fierynxx/aegis-dashboard:0048616
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: aegis-dashboard-svc
  namespace: aegis
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: aegis-dashboard
